Fixed column layouts overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+*, *:before, *:after {
+  box-sizing: border-box; }
+
+img, video {
+  max-width: 100%;
+  height: auto; }
+
 /* ==========================================================================
    Normalize.scss settings
    ========================================================================== */
